fix: change title font to a more readable alternative

--- a/css/styles.css
+++ b/css/styles.css
@@ -15,7 +15,7 @@
     src: url(/fonts/Quicksand-Light.ttf) format('truetype');
 }
 h1 {
-    font-family: Wire;
+    font-family: Quicksand-Light;
     font-size: 40px;
 }
 h2 {
@@ -90,7 +90,7 @@ nav a {
 }
 
 #introduction h1 {
-    font-size: 100px;
+    font-size: 80px;
     text-align: left;
     margin-left: 20px;
 }
